--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,7 @@
 [submodule "gtest"]
    path = 3rdparty/gtest
    url = https://github.com/google/googletest.git
+
+[submodule "3rdparty/boost"]
+	path = 3rdparty/boost
+	url = https://github.com/boostorg/boost.git
