--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,7 @@
+before_install:
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update
+  - sudo apt-get install g++-4.9
+
 install: ./prepare.sh
 script: ./build.sh
