suppress asking questions

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 before_install:
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update
-  - sudo apt-get install g++-4.9
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get update -q
+  - sudo apt-get install g++-4.9 -y
 
 install: ./prepare.sh
 script: ./build.sh
