--- a/.gitmodules
+++ b/.gitmodules
@@ -38,3 +38,6 @@
 [submodule "clang-plugin"]
 	path = 3rdparty/clang-plugin
 	url = https://github.com/ggeorgiev/clang-plugin.git
+[submodule "rocksdb"]
+	path = 3rdparty/rocksdb
+	url = https://github.com/facebook/rocksdb.git
