--- a/.gitmodules
+++ b/.gitmodules
@@ -42,3 +42,6 @@
 [submodule "rocksdb"]
 	path = 3rdparty/rocksdb
 	url = https://github.com/facebook/rocksdb.git
+[submodule "spdlog"]
+	path = 3rdparty/spdlog
+	url = https://github.com/gabime/spdlog.git
