--- a/xcode/dbs-build.xcodeproj/xcshareddata/xcschemes/dbs-test-self-build.xcscheme
+++ b/xcode/dbs-build.xcodeproj/xcshareddata/xcschemes/dbs-test-self-build.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0700"
+   LastUpgradeVersion = "0730"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "NO"
@@ -63,6 +63,10 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "build"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "iwyu"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
