--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: cpp
 
 before_install:
+  - sudo apt-get install software-properties-common
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo add-apt-repository ppa:george-edison55/cmake-3.x
   - sudo apt-get update -q
-  - sudo apt-get --only-upgrade install cmake
+  - sudo apt-get install cmake
 
 install: ./prepare.sh
 script: ./build.sh
