--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,14 @@ language: cpp
 before_install:
   - sudo apt-get install software-properties-common
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-  - sudo add-apt-repository ppa:george-edison55/cmake-3.x
+  - sudo add-apt-repository ppa:george-edison55/cmake-3.x -y
   - sudo apt-get update -q
   - sudo apt-get install cmake
 
-install: ./prepare.sh
+install: ./prepare.sh travis
 script: ./build.sh
+
+cache:
+directories:
+  - clang
+  - boost
