--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,13 @@ addons:
           - cmake-data
 
 before_install:
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get update -q
+  - sudo apt-get install gcc-4.9 g++-4.9 -y
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.9
+  - ./prepare.sh travis
 
 install:
-    ./prepare.sh travis
 
 script:
     ./build.sh
