add the rest of the directories for cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,9 @@ script:
 cache:
     directories:
       - clang
+      - iwyu
       - boost
+      - fmt
       - gtest
       - rocksdb
+      - spdlog
