--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,20 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install gcc-4.8 g++-4.8 -y ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.8 ; fi
 
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install lcov ; fi
+
   - ./prepare.sh
 
 install:
+  - gem install coveralls-lcov
 
 script:
     ./build.sh && ./self-build.sh
+
+after_success:
+  - lcov --directory build --base-directory src --capture --no-external --output-file coverage.info # capture coverage info
+  - lcov --list coverage.info # debug before upload
+  - coveralls-lcov coverage.info # uploads to coveralls
 
 cache:
     directories:
