--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
   - gem install coveralls-lcov
 
 script:
-    ./build.sh && ./self-build.sh
+    ./build.sh && ./dbs src/main.dbs coverage dbs dbs-test && build/dbs-test --gtest_filter=-*.PERFORMANCE_*
 
 after_success:
   - lcov --directory build --base-directory src --capture --no-external --output-file coverage.info | grep Processing # capture coverage info
