add self generated build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
   - gem install coveralls-lcov
 
 script:
-    ./build.sh && ./dbs src/main.dbs coverage dbs dbs-test && build/profile/dbs-test --gtest_filter=-*.PERFORMANCE_*
+    .travis.sh
 
 after_success:
   - lcov --directory build --base-directory src --capture --no-external --output-file coverage.info | grep Processing # capture coverage info
