--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.8 ; fi
 
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install lcov ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo xcode-select --install ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo /opt/local/bin/port install autoconf automake libtool ; fi
 
   - ./prepare.sh
 
