--- a/.gitmodules
+++ b/.gitmodules
@@ -25,4 +25,4 @@
 	url = https://github.com/fmtlib/fmt.git
 [submodule "3rdparty/protobuf"]
 	path = 3rdparty/protobuf
-	url = git@github.com:google/protobuf.git
+	url = https://github.com/google/protobuf.git
