some work on creating axe based parser

--- a/xcode/dbs-build.xcodeproj/xcshareddata/xcschemes/dbs-test-build.xcscheme
+++ b/xcode/dbs-build.xcodeproj/xcshareddata/xcschemes/dbs-test-build.xcscheme
@@ -63,6 +63,10 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "--gtest_filter=CxxParserTest*.*"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--gtest_filter=DbsParserTest*.*"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
