--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install lcov ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install autoconf automake libtool ; fi
 
-  - ./prepare.sh
+  - TRAVIS=1 ./prepare.sh
 
 install:
   - gem install coveralls-lcov
