--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,6 @@
 [submodule "3rdparty/zlib"]
 	path = 3rdparty/zlib
 	url = https://github.com/madler/zlib.git
+[submodule "3rdparty/libgit2"]
+	path = 3rdparty/libgit2
+	url = https://github.com/libgit2/libgit2.git
