--- a/xcode/dbs-build.xcodeproj/xcshareddata/xcschemes/dbs-test-build.xcscheme
+++ b/xcode/dbs-build.xcodeproj/xcshareddata/xcschemes/dbs-test-build.xcscheme
@@ -62,6 +62,10 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "--gtest_filter=RepoTest.INTEGRATION_*"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "--gtest_filter=DbsConfigParserTest.*"
             isEnabled = "NO">
          </CommandLineArgument>
